# CppMMO

./: .clang-format  .coderabbit.yaml  .gitignore  CLIENT_EXAMPLES.md  CMakeLists.txt  CMakePresets.json  CppMMO.sln  Dockerfile  Doxyfile  PROTOCOL_REFERENCE.md  README.md  SERVER_DOCUMENTATION.md  TODO.txt  docker-compose.yml  init.sql
.github/workflows/: ci.yml
CppMMO/Protocol/: C_MoveInput.cs  PlayerInfo.cs  S_EnterZone.cs  S_LeaveZone.cs  S_PlayerEnterZone.cs  S_PlayerHpUpdate.cs  S_PlayerLeaveZone.cs
Protocol/: C_ChangeZone.cs  C_Login.cs  C_Move.cs  Packet.cs  S_PlayerMove.cs  S_PlayerMoveState.cs  UnifiedPacket.cs  Vec2.cs
Protocol/CppMMO/Protocol/: C_Login.cs  PlayerState.cs
Test/: README_Performance_Testing.md  auth_client.py  comprehensive_performance_test.py  create_test_accounts.py  csv_analysis.py  extreme_stress_test_1000.py  movement_load_test.py  no_auth_stress_test.py  performance_analysis.py  requirements.txt  run_performance_tests.py  run_scalability_tests.py  simple_analysis.py  system_monitor.py  test_high_load.py
Test/Protocol/: C_ChangeZone.cs  C_ChangeZone.py  C_Chat.py  C_EnterZone.py  C_Login.py  C_Move.cs  C_Move.py  C_PlayerInput.cs  C_PlayerInput.py  GameEvent.py  Packet.cs  Packet.py  PacketId.cs  PacketId.py  PlayerInfo.cs  PlayerInfo.py  PlayerState.py  S_LeaveZone.py  S_LoginFailure.py  S_LoginSuccess.py  S_PlayerEnterZone.cs  S_PlayerJoined.py  S_PlayerLeaveZone.cs  S_PlayerLeft.py  S_PlayerMove.cs  S_StateCorrection.py  S_WorldSnapshot.cs  S_WorldSnapshot.py  S_ZoneEntered.py  UnifiedPacket.cs  UnifiedPacket.py  Vec2.cs  Vec3.py
Test/Protocol/CppMMO/Protocol/: Packet.py  S_Chat.py  S_EnterZone.py  S_LoginSuccess.py  S_PlayerEnterZone.py  S_PlayerHpUpdate.py  S_PlayerLeaveZone.py  S_PlayerMove.py  Vec2.py
auth/: AuthServer.csproj  Dockerfile  Program.cs  appsettings.json
auth/Controllers/: AuthController.cs
auth/DTOs/: CharacterRequestDto.cs  DeleteUserRequestDto.cs  LoginRequestDto.cs  LoginResponseDto.cs  LogoutRequestDto.cs  PlayerInfoDto.cs  VerifyRequestDto.cs  VerifyResponseDto.cs
auth/Models/: Player.cs  User.cs
auth/Models/DTOs/: LoginRequestDto.cs
auth/Properties/: launchSettings.json
auth/Repositories/: IPlayerRepository.cs  IUserRepository.cs  PlayerRepository.cs  UserRepository.cs
config/: game_config.json  server_config.docker.json
src/: main.cpp  pch.h
src/Common/: protocol.fbs
src/Common/CppMMO/Protocol/: C_MoveInput.cs  GameEvent.cs  Packet.cs  PacketId.cs  PlayerInfo.cs  S_EnterZone.cs  S_LeaveZone.cs  S_PlayerHpUpdate.cs  S_PlayerMoveState.cs  UnifiedPacket.cs  Vec2.cs
src/Game/: GameCommand.h  GameLogicQueue.cpp  GameLogicQueue.h
src/Game/Managers/: ChatManager.cpp  ChatManager.h  GameManager.cpp  GameManager.h  IPacketManager.h  PacketManager.cpp
src/Game/Models/: Player.cpp  Player.h  World.cpp  World.h
src/Game/PacketHandlers/: ChatPacketHandler.cpp  ChatPacketHandler.h  LoginPacketHandler.cpp  LoginPacketHandler.h
src/Game/Services/: AuthService.cpp  AuthService.h  RedisChatService.cpp  RedisChatService.h
src/Game/Spatial/: QuadTree.cpp  QuadTree.h
src/Network/: IPacketManager.h  IService.h  ISession.h  ISessionManager.h  PacketManager.cpp  PacketManager.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  TcpServer.cpp  TcpServer.h
src/Utils/: JobProcessor.cpp  JobProcessor.h  JobQueue.cpp  JobQueue.h  Logger.cpp  Logger.h  MemoryPool.cpp  MemoryPool.h
